--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,9 +1,8 @@
-<fragment android:id="@+id/fragment"
-          android:name="edu.lclark.githubfragmentapplication.MainActivityFragment"
+<FrameLayout android:id="@+id/activity_main_framelayout"
+          android:name="edu.lclark.githubfragmentapplication.fragments.MainActivityFragment"
           xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:app="http://schemas.android.com/apk/res-auto"
-          xmlns:tools="http://schemas.android.com/tools"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           app:layout_behavior="@string/appbar_scrolling_view_behavior"
-          tools:layout="@layout/fragment_main" />
+           />
