--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -4,7 +4,9 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="vertical">
+              android:orientation="vertical"
+    android:padding="16dp"
+    >
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -14,7 +16,7 @@
         cardview:cardElevation="4dp">
 
         <ImageView
-            android:id="@+id/fragment_follower_imageview"
+            android:id="@+id/fragment_user_imageview"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             />
@@ -34,7 +36,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/fragment_follower_name_textview"
+                android:id="@+id/fragment_user_name_textview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="6dp"
@@ -44,6 +46,14 @@
                 />
         </LinearLayout>
     </android.support.v7.widget.CardView>
+
+
+    <Button
+        android:id="@+id/fragment_user_user_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/user_button_text"
+        />
 
 
 </LinearLayout>
